feat: Worked on major issue with authorisation in swagger and updated the backend workflow